# deberta

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
configs/: fsdp2_1node.yaml  pretrain_hf_deberta_v2_parity_base.yaml  pretrain_hf_deberta_v2_parity_small.yaml  pretrain_rope_c4_en.yaml  pretrain_rope_c4_en_2048.yaml  pretrain_rope_c4_en_4096.yaml  pretrain_rope_fineweb_edu.yaml  pretrain_rope_fineweb_edu_2048.yaml  pretrain_rope_fineweb_edu_4096.yaml  tiny_cpu_smoke.yaml
configs/accelerate/: fsdp2_hf_deberta_1node.yaml
configs/custom/: pretrain_rtd_hf_deberta_v3pos_smol2stage4_2048_wp32k_v2.yaml  pretrain_rtd_hf_deberta_v3pos_smol2stage4_4096_wp32k_v2.yaml
configs/custom/compile_stability/: hf1024_compile_default_es_700.yaml  hf1024_compile_default_gdes_700.yaml  hf1024_compile_default_none_700.yaml  hf1024_eager_gdes_700.yaml  hf512_compile_default_gdes_4000.yaml
docs/: data.md  dev.md  fsdp2.md  index.md  keel-paper-technical-overview.md  model.md  norm-strategy.md  objective.md  replication.md  roadmap.md
docs/advanced/: architectures.md  distributed-training.md  torch-compile.md
docs/api/: data.md  modeling.md  training.md
docs/dev/: index.md  rope_hf_modular_plan.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: configuration.md  data-pipeline.md  exporting-models.md
scratch/: compile_parity_check.py  compile_parity_check_gdes_sync.py  run_compile_default_matrix.sh
src/deberta/: __init__.py  __main__.py  checkpoint_utils.py  cli.py  config.py  export_cli.py  io_utils.py  log_utils.py  mapping_utils.py  run_layout.py
src/deberta/data/: __init__.py  collator.py  loading.py  streaming.py
src/deberta/modeling/: __init__.py  activations.py  builder.py  deberta_v2_native.py  export_utils.py  flashdeberta_attention.py  flashdeberta_bias_op.py  flashdeberta_dense_bias_op.py  flashdeberta_docblock_op.py  flashdeberta_fixed_op.py  flashdeberta_patch.py  flashdeberta_prefix_pack.py  flashdeberta_segment_pack.py  flashdeberta_varlen_op.py  mask_utils.py  norm.py  rope.py  rope_encoder.py  rtd.py
src/deberta/training/: __init__.py  checkpointing.py  compile.py  entrypoint.py  export_helpers.py  loop_utils.py  metrics.py  pretrain.py  run_config.py  run_management.py  runtime.py  steps.py  tracker_utils.py
src/deberta/utils/: checkpoint_utils.py  io.py  log.py  mapping.py  paths.py  serialize.py  types.py
tests/: _config_and_training_shared_imports.py  _fakes.py  conftest.py  test_audit_contracts.py  test_builder.py  test_cli_entrypoint.py  test_config_and_training_cli.py  test_config_and_training_core.py  test_config_and_training_resume.py  test_config_and_training_runtime.py  test_config_and_training_utils.py  test_config_loading.py  test_export_artifacts.py  test_export_cli.py  test_export_cli_entrypoint.py  test_flashdeberta_patch.py  test_smoke.py
tools/: audit_contracts.py  compile_drift_probe.py  flashdeberta_bias_tune.py  flashdeberta_microbench.py  flashdeberta_parity_test.py  flashdeberta_rtd_profile.py  flashdeberta_varlen_tune.py  generate_api_docs.py  run_flashdeberta_benchmarks.sh  train_flashdeberta.py
