[build-system]
requires = ["setuptools>=77.0.0", "setuptools-scm[toml]>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deberta"
dynamic = ["version"]
description = "Modern refresh of DeBERTa RTD/ELECTRA-style pretraining built on PyTorch, Transformers, Accelerate, and Datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Peter Szemraj", email = "peterszemraj+dev@gmail.com" }]
maintainers = [{ name = "Peter Szemraj", email = "peterszemraj+dev@gmail.com" }]
keywords = ["deberta", "pretraining", "rtd", "electra", "fsdp2", "transformers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "torch>=2.9.1",
  "transformers>=4.45.0",
  "accelerate>=1.6.0",
  "datasets>=3.0.0",
  "safetensors",
  "tqdm",
  "numpy>=1.24.0",
  "pyyaml>=6.0",
  "sentencepiece>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/pszemraj/deberta"
Repository = "https://github.com/pszemraj/deberta.git"
Issues = "https://github.com/pszemraj/deberta/issues"
Documentation = "https://github.com/pszemraj/deberta/tree/main/docs"

[project.optional-dependencies]
# Logging
wandb = ["wandb>=0.17.0"]
tensorboard = ["tensorboard>=2.16.0"]

# Dev quality-of-life
dev = ["ruff>=0.6.0", "black>=24.8.0", "mypy>=1.11.0", "pytest>=8.0.0"]

[project.scripts]
# Unified subcommand-style CLI entrypoint
"deberta" = "deberta.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/deberta/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
